fixed but with some navigation items being visible when collapsed, this only seemed to appear after adding the series list to the screen

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -59,6 +59,7 @@ main {
 
 .navigation-hidden {
 	width: 0%;
+	visibility: hidden;
 }
 
 .blue-button {
